force-app/main/default/objects/Blanket_Row__c/Blanket_Row__c.object-meta.xml
<CustomObject>
    <description>A single row on the blanket representing a given day of the year</description>
    <label>Blanket Row</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Blanket Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blanket Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>