force-app/main/default/objects/Blanket_Row__c/fields/Color_Scheme_Item__c.field-meta.xml
<CustomField>
    <fullName>Color_Scheme_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Color Scheme Item that defines this Blanket Row&apos;s</description>
    <inlineHelpText>The Color Scheme Item that defines this Blanket Row&apos;s</inlineHelpText>
    <label>Color Scheme Item</label>
    <referenceTo>Color_Scheme_Item__c</referenceTo>
    <relationshipLabel>Blanket Rows</relationshipLabel>
    <relationshipName>Blanket_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>