force-app/main/default/objects/Blanket_Row__c/fields/DateWeather__c.field-meta.xml
<CustomField>
    <fullName>DateWeather__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to a DateWeather record where this BlanketRow can pull a Date and Temp</description>
    <inlineHelpText>Relationship to a DateWeather record where this BlanketRow can pull a Date and Temp</inlineHelpText>
    <label>DateWeather</label>
    <referenceTo>DateWeather__c</referenceTo>
    <relationshipLabel>Blanket Rows</relationshipLabel>
    <relationshipName>Blanket_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>