force-app/main/default/objects/Blanket_Row__c/fields/Temperature_Blanket__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Blanket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The blanket project that this row is a part of</description>
    <inlineHelpText>The blanket project that this row is a part of</inlineHelpText>
    <label>Temperature Blanket</label>
    <referenceTo>Temperature_Blanket__c</referenceTo>
    <relationshipLabel>Blanket Rows</relationshipLabel>
    <relationshipName>Blanket_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>